@@ -120,6 +120,11 @@ CVS code -
   do_browser()
 	- Call check_statblank() instead of blanking the statusbar
 	  unconditionally, for consistency. (David Benbennick)
+- global.c:
+  shortcut_init()
+	- Don't assign any handler functions to the help browser keys,
+	  as the help browser handles them all internally. (David
+	  Benbennick)
 - move.c:
   do_first_line(), do_last_line()
 	- Move these functions here from winio.c. (DLR)
@@ -354,6 +359,10 @@ CVS code -
 	  that slang and other non-ncurses versions of curses will
 	  properly place the cursor back in the edit window instead of
 	  leaving it at the end of the statusbar. (DLR)
+  do_help()
+	- Overhaul for efficiency, and allow scrolling through the help
+	  via the arrow keys as well as the paging keys. (David
+	  Benbennick)
   do_credits()
 	- Use napms() instead of nanosleep(), as it does the same thing
 	  (aside from taking an argument in milliseconds instead of
